--- a/index.html
+++ b/index.html
@@ -6,10 +6,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Light & Dark Theme</title>
+    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" />
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <!-- <h2>[Under Development]</h2> -->
 
+    <!-- Navigation -->
+    <nav id="nav">
+        <a href="#home">HOME</a>
+        <a href="#about">ABOUT</a>
+        <a href="#projects">PROJECTS</a>
+        <a href="#contact">CONTACT</a>
+    </nav>
+
+    <!-- Home Section -->
+    <section id="home">
+        <div class="title-group">
+            <h2>Hello There, I'm</h2>
+            <h1>Shazid Hasan Riam</h1>
+            <h2>Welcome to My Website!</h2>
+        </div>
+    </section>
+
+    <!-- About Section -->
+    <section id="about">
+        <h1>Undraw Illustrations</h1>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="projects">
+        <h1>Buttons</h1>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact">
+
+    </section>
+
+
+    <script src="script.js"></script>
 </body>
 
 </html>
