--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 </head>
 
 <body>
-    <!-- <h2>[Under Development]</h2> -->
-
     <!-- Navigation -->
     <nav id="nav">
         <a href="#home">HOME</a>
@@ -22,8 +20,14 @@
         <a href="#contact">CONTACT</a>
     </nav>
 
+
+
     <!-- Home Section -->
     <section id="home">
+        <!-- Under Development Message -->
+        <div id="under-development">
+            <h2>[This Project Is Under Development.]</h2>
+        </div>
         <div class="title-group">
             <h2>Hello There, I'm</h2>
             <h1>Shazid Hasan Riam</h1>
@@ -33,12 +37,39 @@
 
     <!-- About Section -->
     <section id="about">
-        <h1>Undraw Illustrations</h1>
+        <h1>About Me</h1>
+        <div class="about-container">
+            <div class="image-container">
+                <h2>Web Innovation</h2>
+                <img src="Images/undraw_proud_coder_light.svg" alt="Proud Coder" id="image1">
+            </div>
+            <div class="image-container">
+                <h2>Problem Solving</h2>
+                <img src="Images/undraw_feeling_proud_light.svg" alt="Feeling Proud" id="image2">
+            </div>
+            <div class="image-container">
+                <h2>High Concept</h2>
+                <img src="Images/undraw_conceptual_idea_light.svg" alt="Conceptual Idea" id="image3">
+            </div>
+        </div>
     </section>
 
     <!-- Projects Section -->
     <section id="projects">
         <h1>Buttons</h1>
+        <div class="buttons">
+            <button class="primary">Primary</button>
+            <button class="secondary">Secondary</button>
+            <button class="primary" disabled>Disabled</button>
+            <button class="outline">Outline</button>
+            <button class="secondary-outline">Alt Outline</button>
+            <button class="outline" disabled>Disabled</button>
+        </div>
+        <div class="text-box" id="text-box">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque tempore, explicabo voluptates iste
+                deleniti, eaque eveniet dolor porro incidunt repudiandae dignissimos tempora perspiciatis hic asperiores
+                corporis praesentium commodi dolore placeat!</p>
+        </div>
     </section>
 
     <!-- Contact Section -->
