Done With HTML & CSS

--- a/index.html
+++ b/index.html
@@ -74,7 +74,21 @@
 
     <!-- Contact Section -->
     <section id="contact">
+        <h1>Find Me On</h1>
+        <div class="social-icons">
 
+            <a href="https://www.github.com/shazidhasanriam/"><i class="fab fa-github"></i></a>
+
+            <a href="https://www.linkedin.com/in/shazidhasanriam/"><i class="fab fa-linkedin-in"></i></a>
+
+            <a href="https://twitter.com/ShazidHasanRiam"><i class="fab fa-twitter"></i></a>
+
+            <a href="https://www.facebook.com/ShazidHasanRiam/"><i class="fab fa-facebook"></i></a>
+
+            <a href="https://www.instagram.com/ShazidHasanRiam/"><i class="fab fa-instagram"></i></a>
+
+            <a href="https://www.youtube.com/channel/UCREwhUAnTvTaunJ0vCcP4Tg"><i class="fab fa-youtube"></i></a>
+        </div>
     </section>
 
 
