--- a/index.html
+++ b/index.html
@@ -12,6 +12,24 @@
 </head>
 
 <body>
+    <!-- Dark Mode -->
+    <div class="theme-switch-wrapper">
+        <span id="toggle-icon">
+            <span class="toggle-text">
+                Light Mode
+                <i class="fas fa-sun"></i>
+            </span>
+        </span>
+        <label class="theme-switch">
+            <input type="checkbox">
+            <div class="slider round">
+
+            </div>
+        </label>
+    </div>
+
+
+
     <!-- Navigation -->
     <nav id="nav">
         <a href="#home">HOME</a>
