--- a/index.html
+++ b/index.html
@@ -15,20 +15,14 @@
     <!-- Dark Mode -->
     <div class="theme-switch-wrapper">
         <span id="toggle-icon">
-            <span class="toggle-text">
-                Light Mode
-                <i class="fas fa-sun"></i>
-            </span>
+            <span class="toggle-text">Light Mode</span>
+            <i class="fas fa-sun"></i>
         </span>
         <label class="theme-switch">
             <input type="checkbox">
-            <div class="slider round">
-
-            </div>
+            <div class="slider round"></div>
         </label>
     </div>
-
-
 
     <!-- Navigation -->
     <nav id="nav">
@@ -38,13 +32,11 @@
         <a href="#contact">CONTACT</a>
     </nav>
 
-
-
     <!-- Home Section -->
     <section id="home">
         <!-- Under Development Message -->
         <div id="under-development">
-            <h2>[This Project Is Under Development.]</h2>
+            <h2>[This website is not responsive & currently under Development.]</h2>
         </div>
         <div class="title-group">
             <h2>Hello There, I'm</h2>
@@ -94,22 +86,16 @@
     <section id="contact">
         <h1>Find Me On</h1>
         <div class="social-icons">
-
             <a href="https://www.github.com/shazidhasanriam/"><i class="fab fa-github"></i></a>
-
             <a href="https://www.linkedin.com/in/shazidhasanriam/"><i class="fab fa-linkedin-in"></i></a>
-
             <a href="https://twitter.com/ShazidHasanRiam"><i class="fab fa-twitter"></i></a>
-
             <a href="https://www.facebook.com/ShazidHasanRiam/"><i class="fab fa-facebook"></i></a>
-
             <a href="https://www.instagram.com/ShazidHasanRiam/"><i class="fab fa-instagram"></i></a>
-
             <a href="https://www.youtube.com/channel/UCREwhUAnTvTaunJ0vCcP4Tg"><i class="fab fa-youtube"></i></a>
         </div>
     </section>
 
-
+    <!-- Script -->
     <script src="script.js"></script>
 </body>
 
