Initial Final Update

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section id="home">
         <!-- Under Development Message -->
         <div id="under-development">
-            <h2>[This website is not responsive & currently under Development.]</h2>
+            <h2>[This website is not responsive.]</h2>
         </div>
         <div class="title-group">
             <h2>Hello There, I'm</h2>
